Rework on dependency analyzer for better analysis